added several events

--- a/app/index.html
+++ b/app/index.html
@@ -16,14 +16,31 @@
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="../bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
   <body>
 
-    <div class="lemon">I'm so short!</div>
+    <header> Click here first!</header>
+    <div class="keydown-practice">Then press a key!</div>
+    <div class="input-container">
+        <input class="input" type='text'/>
+    </div>
+    <button class="click-practice">Click me</button>
+    <div class="replace-class">
+        <div class="replace-practice">
+            <span class="replace-text">Would you like to see<br>
+            What will happen?<br>
+            If you click me?
+            </span>
+        </div>
+    </div> 
+ <div class="mouseenter-practice">Then scroll over me.</div>
+    
+    
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
