--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
             </span>
         </div>
     </div> 
-<div class="mouseenter-practice">Then scroll over me.<br>Maybe more than once</div> 
+<div class="mouseenter-practice">Then scroll over me.<br>Once. Or twice. Or thrice!</div> 
     <button class="do-not-press">Do NOT press me</button>
      
     
